# pipeline

./: .gitignore  CMakeLists.googletest.txt  CMakeLists.txt
src/: CMakeLists.txt
src/Common/: Array1D.hpp  Array2D.hpp  ArrayAccessor1D.hpp  CMakeLists.txt  ConstSizePriorityQueue.hpp  IArray2D.hpp  Matrix.hpp  PriorityQueue.hpp  QueueInterface.hpp  SharedConstSizePQAdapter.hpp  SharedContainer.hpp  SharedPriorityQueueAdapter.hpp  SharedQueue.hpp  ThreadRunner.hpp  Vector1D.hpp  Vector2D.hpp
src/Common/_test/: Array2DPerformanceTest.cpp  Array2DTest.cpp  CMakeLists.txt  PqAdapterTest.cpp  Vector1DTest.cpp  Vector2DTest.cpp
src/Common/bench/: Array2DBench.cpp  CMakeLists.txt
src/Common/test/: Array1DTest.cpp  CMakeLists.txt  MatrixTest.cpp  PriorityQueueTest.cpp
src/PipelineCommon/: BasePipelineData.cpp  BasePipelineData.hpp  BasePipelineMessage.hpp  BasePipelineStage.cpp  BasePipelineStage.hpp  CMakeLists.txt  DataProcessorManager.hpp  DebugDisplay.hpp  DefaultPipelineBuilder.cpp  DefaultPipelineBuilder.hpp  DefaultPipelineController.hpp  IDataProcessor.hpp  IMessageRouter.hpp  IPipelineBuilder.hpp  IPipelineInterface.cpp  IPipelineInterface.hpp  IPipelineMessageRouter.hpp  IPipelineStage.hpp  IPipelineStageBuilder.cpp  IPipelineStageBuilder.hpp  PipelineCommon.hpp  PipelineConfigurationTypes.hpp  PipelineDataBase.cpp  PipelineDataBase.hpp  PipelineDataMessage.cpp  PipelineDataMessage.hpp  PipelineIdentifiers.hpp  PipelineMessageType.hpp  PipelineQueueManager.cpp  PipelineQueueManager.hpp  PipelineQueueTypes.hpp  PipelineSenderReceiver.cpp  PipelineSenderReceiver.hpp  PipelineStageBase.cpp  PipelineStageBase.hpp  SeamCarverPipelineController.hpp  ShutdownMessage.cpp  ShutdownMessage.hpp  StageNumbers.hpp
src/PipelineCommon/PipelineMessageRouter/: CMakeLists.txt  PipelineMessageRouter.cpp  PipelineMessageRouter.hpp  PipelineQueueManager.cpp  PipelineQueueManager.hpp  PipelineSenderReceiver.cpp  PipelineSenderReceiver.hpp
src/PipelineCommon/PipelineMessages/: BasePipelineMessage.cpp  BasePipelineMessage.hpp  CMakeLists.txt  PipelineDataMessage.cpp  PipelineDataMessage.hpp  PipelineMessageBase.cpp  PipelineMessageBase.hpp  PipelineShutdownMessage.cpp  PipelineShutdownMessage.hpp  ShutdownMessage.cpp  ShutdownMessage.hpp
src/PipelineCommon/_test/: CMakeLists.txt  PipelineQueueManagerTest.cpp  PipelineSenderReceiverTest.cpp  PipelineStageBaseTest.cpp
src/PipelineCommon/test/: CMakeLists.txt  PipelineQueueManagerTest.cpp
src/SeamCarver/: CMakeLists.txt  CumulativeEnergyCalculator.cpp  CumulativeEnergyCalculator.hpp  PixelEnergyCalculator.cpp  PixelEnergyCalculator.hpp  SeamCarverCommon.hpp  SeamCarverData.hpp  VerticalSeamFinder.cpp  VerticalSeamFinder.hpp
src/SeamCarver/SeamCarverCommon/: BaseSeamCarverInterface.cpp  BaseSeamCarverInterface.hpp  CMakeLists.txt  DebugDisplay.hpp  SeamCarverPipelineBuilder.cc  SeamCarverPipelineBuilder.cpp  SeamCarverPipelineBuilder.hh  SeamCarverPipelineBuilder.hpp  SeamCarverProcessorFactory.cpp  SeamCarverProcessorFactory.hpp  SeamCarverProcessorFactoryRegistration.cpp  SeamCarverProcessorFactoryRegistration.hpp  SeamCarverStageFactory.cpp  SeamCarverStageFactory.hpp  VerticalSeamCarverData.cpp  VerticalSeamCarverData.hpp  VerticalSeamCarverPipelineBuilder.cpp  VerticalSeamCarverPipelineBuilder.hpp
src/SeamCarver/SeamCarverStages/: CMakeLists.txt  ComputeEnergyStage.cpp  ComputeEnergyStage.hpp  CumulativePathEnergyStage.cpp  CumulativePathEnergyStage.hpp  MergeChannelsStage.cpp  MergeChannelsStage.hpp  SeamCarverBaseStage.cpp  SeamCarverBaseStage.hpp  SeamCarverDataProcessors.hpp  SeamCarverStages.hpp  SeamFinderStage.cpp  SeamFinderStage.hpp  SeamRemoverStage.cpp  SeamRemoverStage.hpp
src/SeamCarver/SeamCarverStages/SeamCarverDataProcessors/: CMakeLists.txt  ComputeEnergy.cpp  ComputeEnergy.hpp  CumulativePathEnergy.cpp  CumulativePathEnergy.hpp  ISeamCarverDataProcessor.cpp  ISeamCarverDataProcessor.hpp  MergeChannels.cpp  MergeChannels.hpp  SeamFinder.cpp  SeamFinder.hpp  SeamRemover.cpp  SeamRemover.hpp
src/SeamCarverCommon/: CMakeLists.txt  SeamCarverStageFactory.hpp  SeamCarverStageFactoryRegistration.cpp  SeamCarverStageFactoryRegistration.hpp  VerticalSeamCarverData.cpp  VerticalSeamCarverData.hpp
src/Stages/: BasePipelineStage.cpp  BasePipelineStage.hpp  CMakeLists.txt  ComputeEnergyStage.cpp  ComputeEnergyStage.hpp  CumulativePathEnergyStage.cpp  CumulativePathEnergyStage.hpp  IPipelineStage.hpp  SeamFinderStage.cpp  SeamFinderStage.hpp  SeamRemoverStage.hpp
test/: CMakeLists.txt  ComputeEnergyStageTest.cpp  ConstSizePriorityQueueTest.cpp  PipelineQueueManagerTest.cpp  PipelineSenderReceiverTest.cpp  PqAdapterTest.cpp  PriorityQueueTest.cpp  SeamCarverProcessorFactoryTest.cpp  SeamCarverStageFactoryTest.cpp  ThreadRunnerTest.cpp  VerticalSeamCarverPipelineBuilderTest.cpp  test_computeenergystage.cpp  test_cumulativepathenergycalculatorstage.cpp  test_pqadapter.cpp  test_seamcarverpipelineinterface.cpp  test_seamcarverpipelinemanager.cpp  test_seamcarverqueuemanager.cpp
